src/main/java/com/example/petree/global/error/exception/EntityNotFoundException.java
package com.example.petree.global.error.exception;

import com.example.petree.global.error.ErrorCode;

public class EntityNotFoundException extends BusinessException {

    public EntityNotFoundException(ErrorCode errorCode) {
        super(errorCode);
    }

}
